# fvr_engine

./: .gitignore  Cargo.toml  LICENSE.txt  README.md  SCRATCH.md  rustfmt.toml
assets/fonts/deja_vu_sans_mono/: bold.json  bold_italic.json  bold_italic.toml  bold_italic_outline.json  bold_outline.json  bold_outline.toml  italic.json  italic_outline.json  regular.json  regular_outline.json  regular_outline.toml
assets/fonts/fantasque_sans_mono/: bold.json  bold_italic.json  bold_italic_outline.json  bold_outline.json  italic.json  italic_outline.json  regular.json  regular_outline.json  regular_outline.toml
config/: default_keybindings.json  fvr_engine.json
fvr_engine/: Cargo.toml
fvr_engine-atlas/: Cargo.toml
fvr_engine-atlas/fonts/deja_vu_sans_mono/: bold.fnt
fvr_engine-atlas/fonts/fantasque_sans_mono/: italic_outline.fnt  regular_outline.fnt
fvr_engine-atlas/src/: main.rs
fvr_engine-atlas_generator/: Cargo.toml  glyphs.txt
fvr_engine-atlas_generator/fonts/anonymous_pro/: regular.fnt
fvr_engine-atlas_generator/fonts/deja_vu_sans_mono/: bold_italic.fnt  bold_italic_outline.fnt  bold_outline.fnt  italic.fnt  italic_outline.fnt  regular.fnt  regular_outline.fnt
fvr_engine-atlas_generator/fonts/fantasque_sans_mono/: bold.fnt  bold_italic.fnt  bold_italic_outline.fnt  bold_outline.fnt  italic.fnt  regular.fnt
fvr_engine-atlas_generator/fonts/fira_code/: outline.fnt  regular.fnt
fvr_engine-atlas_generator/fonts/input_mono/: regular.fnt
fvr_engine-atlas_generator/fonts/monoid/: regular.fnt
fvr_engine-atlas_generator/fonts_32/anonymous_pro/: outline.fnt
fvr_engine-atlas_generator/fonts_32/deja_vu_sans_mono/: outline.fnt
fvr_engine-atlas_generator/fonts_32/input_mono/: outline.fnt
fvr_engine-atlas_generator/fonts_64/deja_vu_sans_mono/: outline.fnt  regular.fnt
fvr_engine-atlas_generator/fonts_64/fantasque_sans_mono/: outline.fnt
fvr_engine-atlas_generator/fonts_64/input_mono/: outline.fnt  regular.fnt
fvr_engine-atlas_generator/fonts_64/monoid/: outline.fnt
fvr_engine-atlas_generator/src/: main.rs
fvr_engine-client/: Cargo.toml
fvr_engine-client/src/: client.rs  debug_gui.rs  font_metrics_handler.rs  gl_helpers.rs  input_manager.rs  input_repeat.rs  lib.rs  quad_grid.rs  renderer.rs  renderer_v2.rs  shader_strings.rs  sparse_quad_grid.rs  terminal.rs
fvr_engine-client/src/widgets/: button.rs  button_list.rs  frame.rs  mod.rs  rich_text_wrapper.rs  rich_text_writer.rs  scroll_log.rs  scrollbar.rs
fvr_engine-core/: Cargo.toml
fvr_engine-core/src/: a_star.rs  adjacency.rs  config.rs  cp437.rs  dijkstra_map.rs  direction.rs  distance.rs  flee_map.rs  fov.rs  grid_map.rs  lib.rs  lines.rs  map2d.rs  map_2d.rs  misc.rs  palette_color.rs  primitives.rs  radius.rs  rect.rs  serialized_metrics.rs  sub_map.rs  tile.rs  timer.rs  traits.rs  translate_map.rs
fvr_engine-parser/: Cargo.toml
fvr_engine-parser/benches/: rich_text_benchmark.rs
fvr_engine-parser/src/: lib.rs  rich_text.rs
fvr_engine-renderer/: Cargo.toml
fvr_engine-server/: Cargo.toml
fvr_engine-server/src/: actor.rs  behavior.rs  cell.rs  components.rs  goals.rs  intentions.rs  lib.rs  server.rs  server_v2.rs  systems.rs  thing.rs  zone.rs  zone_v2.rs
fvr_engine/src/: main.rs  scene_stack.rs
fvr_engine/src/scenes/: initial.rs  main_menu.rs  mod.rs  scratch.rs
fvr_engine/src/scenes/transitions/: fade.rs  fade_in.rs  fade_out.rs  mod.rs
resources/font_atlases/: anonymous_pro.toml  deja_vu_sans_mono.toml  input_mono.toml  monoid.toml
resources/font_atlases/deja_vu_sans_mono/: bold.toml  bold_italic_outline.toml
resources/font_atlases_bak/: fantasque_sans_mono.toml  fira_code.toml  input_mono.toml
resources/fonts/: create_sdf_textures.sh
resources/fonts/deja_vu_sans_mono/: italic.toml  regular.toml
resources/fonts/deja_vu_sans_mono_sdf/: italic_outline.toml
resources/fonts/fantasque_sans_mono/: bold.toml  bold_italic_outline.toml  bold_outline.toml  regular.toml
resources/fonts/fantasque_sans_mono_sdf/: bold_italic.toml  italic.toml  italic_outline.toml
