[package]
name = "fvr_engine-atlas"
version = "0.1.0"
authors = ["Jacob Adkins <jacobpadkins@gmail.com>"]
edition = "2018"

[dependencies]
fvr_engine-core = { path = "../fvr_engine-core", version = "0.1.0" }
anyhow = "1.0.44"
clap = "2.33.3"
image = "0.23.14"
rect_packer = "0.2.1"
serde = "1.0.130"
serde_derive = "1.0.130"
serde_json = "1.0.68"
xml-rs = "0.8.4"