[package]
name = "fvr_engine-atlas_generator"
version = "0.1.0"
authors = ["Jacob Adkins <jacobpadkins@gmail.com>"]
edition = "2018"

[dependencies]
fvr_engine-core = { path = "../fvr_engine-core", version = "0.1.0" }
anyhow = "1.0.38"
clap = "2.33.3"
hashbrown = "0.11.2"
image = "0.23.13"
rect_packer = "0.2.1"
serde = "1.0.126"
serde_derive = "1.0.126"
toml = "0.5.8"
xml-rs = "0.8.3"