[package]
name = "fvr_engine-client"
version = "0.1.0"
authors = ["Jacob Adkins <jacobpadkins@gmail.com>"]
edition = "2018"

[dependencies]
fvr_engine-core = { path = "../fvr_engine-core", version = "0.1.0" }
anyhow = "1.0.38"
gl = "0.14.0"
glam = "0.12.0"
imgui = "0.7.0"
imgui-opengl-renderer = "0.11.0"
imgui-sdl2 = "0.14.0"
rand = "0.8.3"

[dependencies.sdl2]
version = "0.34.2"
default-features = false
features = ["unsafe_textures"]