[package]
name = "fvr_engine-core"
version = "0.1.0"
authors = ["Jacob Adkins <jacobpadkins@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0.38"
bracket-geometry = "0.8.2"
itertools = "0.10.0"
num-traits = "0.2.14"
once_cell = "1.7.2"
rand = "0.8.3"
sdl2 = "0.34.2"
serde = "1.0.123"
serde_derive = "1.0.123"