[package]
name = "fvr_engine-core"
version = "0.1.0"
authors = ["Jacob Adkins <jacobpadkins@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0.44"
fnv = "1.0.7"
itertools = "0.10.1"
num = "0.4.0"
num-traits = "0.2.14"
once_cell = "1.8.0"
ordered-float = "2.8.0"
priority-queue = "1.2.0"
rand = "0.8.4"
sdl2 = "0.34.5"
serde = "1.0.130"
serde_derive = "1.0.130"
