[package]
name = "fvr_engine-parser"
version = "0.1.0"
authors = ["Jacob Adkins <jacobpadkins@gmail.com>"]
edition = "2018"

[dependencies]
fvr_engine-core = { path = "../fvr_engine-core", version = "0.1.0" }
anyhow = "1.0.44"
criterion = "0.3.5"
nom = "7.0.0"

[[bench]]
name = "rich_text_benchmark"
harness = false