[package]
name = "fvr_engine-server"
version = "0.1.0"
edition = "2018"

[dependencies]
fvr_engine-client = { path = "../fvr_engine-client", version = "0.1.0" }
fvr_engine-core = { path = "../fvr_engine-core", version = "0.1.0" }
anyhow = "1.0.42"
once_cell = "1.8.0"
rand = "0.8.3"

[dependencies.specs]
version = "0.17.0"
features = ["specs-derive"]