[package]
name = "fvr_engine"
version = "0.1.0"
authors = ["Jacob Adkins <jacobpadkins@gmail.com>"]
edition = "2018"

[dependencies]
fvr_engine-client = { path = "../fvr_engine-client", version = "0.1.0" }
fvr_engine-core = { path = "../fvr_engine-core", version = "0.1.0" }
fvr_engine-parser = { path = "../fvr_engine-parser", version = "0.1.0" }
fvr_engine-server = { path = "../fvr_engine-server", version = "0.1.0" }
anyhow = "1.0.44"